--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-    <link
-      rel="shortcut icon"
-      href="../../events/sports/src/assets/brand-logo.png"
-      type="image/x-icon"
-    />
+    <title>Shettigar Sports Summit - 2025</title>
+    <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="root"></div>
